fixed CSS overflow bugs

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,10 +15,6 @@
 *= require jquery.fileupload-ui
 */
 
-html{
-  overflow: hidden;
-}
-
 #top-nav{
 	background: #000;
 }
@@ -133,9 +129,8 @@ html{
 
 
 .application_column {
-  margin-left: 220px;
+  margin-left: 235px;
   position: relative;
-  overflow: hidden;
 }
 
 @media only screen and (max-width: 1200px) {
